v0.1.3 - Logs 
    - Commit: 
    - Add Logs for sending/receiving 
    - View logs
    - Log filters
    - Rename destination path if file exists (suffix _N)
    - Send auto option (autosend if 1)
    - Prompt name and timeout on first use (no ~/.dali file yet)
    - Check if can prioIP based on profile (e.g. LAN, WiFi)
v0.1.2 - Feature Updates 
    x Commit: 2026-01-16 16:35
    x Set defaultTimeout to 3s
    x Lowercase command and option keys
    x Update README Usage
    x Transfer command implementations to internal package 
    x Improve help command
    x Find options (name, ip)
    x Open auto-accept
        x In Receiving files, prompt confirmation
        x Send rejection message if not accepted
    x Update command 
v0.1.1 - Hand-Coded Dali    
    x Commit: 2026-01-16 11:21
    x Remove AI-generated code 
    x Load name and IP address 
    x Get command and args options 
    x Set name and timeout (persistent)
    x Discover peers 
    x Discovery listener 
    x Open command options 
    x Receive file 
    x Send command options 
    x Send file
    x Version and commands list
v0.1.0 - Vibe-Coded Dali 
    x Commit: 2026-01-14 15:11
    x Vibe coded (Claude Opus 4.5) in Rust 
    x Add future features list to README 
    x Vibe coded (Claude Opus 4.5) conversion of Rust to Go