@@ -1,11 +1,12 @@
 v0.1.3 - Logs 
     - Commit: 
-    - Add Logs for sending/receiving 
+    x Add Logs for sending/receiving 
+    x Prompt name and timeout on first use (no ~/.dali file yet)
     - View logs
     - Log filters
+    - Filesize string (Kb, Mb instead of bytes)
     - Rename destination path if file exists (suffix _N)
     - Send auto option (autosend if 1)
-    - Prompt name and timeout on first use (no ~/.dali file yet)
     - Check if can prioIP based on profile (e.g. LAN, WiFi)
 v0.1.2 - Feature Updates 
     x Commit: 2026-01-16 16:35
